--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     border-top: 3px solid white;
     border-bottom: 1px solid white;
     height: 80px;
-    border-top: 1px solid rgb(143, 212, 143);;
+    border-top: 1px solid rgb(143, 212, 143);
   }
   
   .hour {
