--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    background-color: #d8baba;
   }
   
   textarea{
@@ -12,9 +13,9 @@ body {
     border-left: 1px solid black;
     padding: 10px;
   }
-  .col-8 {
+  /* .col-md-8 {
     border-left: 4px solid black;
-  }
+  } */
   
   .jumbotron {
     text-align: center;
@@ -28,7 +29,7 @@ body {
     white-space: pre-wrap;
   }
   
-  .time-block{
+  .input-row{
     text-align: center;
     border-radius: 15px;
   }
@@ -62,7 +63,7 @@ body {
     color: white;
   }
   
-  #saveBtn {
+  .saveBtn {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -75,30 +76,3 @@ body {
     transition: all .3s ease-in-out;
   }
 
-  /* .btn {
-    color: blue;
-    display: block;
-    position: relative;
-    left: 50%;
-    background-color: rgb(113, 163, 238);
-    height: 60%;
-    bottom: 20%;
-    width: 75%;
-
-  }
-  span{
-    text-align: center;
-    display: block;
-    position: relative;
-    top: 50%;
-   
-  }
-input{
-  width: 116%;
-  display: block;
-  position: relative;
-  height: 66%;
-  bottom: 25%;
-
-}
-   */
