--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     border-left: 1px solid black;
     padding: 10px;
   }
-  /* .col-md-8 {
+  /* .col-8 {
     border-left: 4px solid black;
   } */
   
